Refactor Package Lists
use only used packages and upgrade to latest version + delete some log files + update md files and other files